# app/Http/Requests/StoreStationRequest.php
@@ -14,7 +14,11 @@ class StoreStationRequest extends BaseRequest
     public function rules()
     {
         return [
-            //
+            'name' => 'required|string',
+            'code' => 'required|string|',
+            'latitude' => 'required|string|',
+            'longitude' => 'required|string|',
+            'city' => 'required|string|',
         ];
     }
 }
